--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,10 @@
 ---
-import ModernHero from "@/components/home/HeroSection";
-import ModernServicesSection from "@/components/home/ServicesSection";
 import Main from "../components/Main.astro";
 import Layout from "../layouts/Layout.astro";
 import SiteData from "@/constants/siteData.json";
 import TestimonialsSection from "@/components/home/TestimonialsSection.astro";
-import CinematicGrid from "@/components/home/CinematicGrid";
+import HeroSection from "@/components/home/HeroSection.astro";
+import ServicesSection from "@/components/home/ServicesSection.astro";
 ---
 
 <Layout
@@ -15,8 +14,8 @@ import CinematicGrid from "@/components/home/CinematicGrid";
   }}
 >
   <Main>
-    <ModernHero client:only="react" />
-    <ModernServicesSection client:only="react" />
+    <HeroSection />
+    <ServicesSection />
     <TestimonialsSection />
   </Main>
 </Layout>
