--- a/src/pages/uses.astro
+++ b/src/pages/uses.astro
@@ -3,7 +3,7 @@ import SiteData from "@/constants/siteData.json";
 import Layout from "../layouts/Layout.astro";
 import HeroUses from "../components/uses/hero-uses.astro";
 import Main from "@/components/Main.astro";
-import CinematicGrid from "@/components/home/CinematicGrid";
+import CinematicGrid from "@/components/home/CinematicGrid.astro";
 ---
 
 <Layout
@@ -14,7 +14,7 @@ import CinematicGrid from "@/components/home/CinematicGrid";
   keywords={SiteData.pages.uses.keywords}
 >
   <Main class="min-h-screen bg-gray-900 text-white">
-    <CinematicGrid client:only="react" />
+    <CinematicGrid />
     <div class="mx-auto max-w-6xl md:px-4 md:py-16">
       <header class="mb-12 text-center">
         <h1 class="mb-4 text-4xl font-bold text-white md:text-5xl">
