feat: add Vercel Analytics integration and update package.json

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,6 +15,7 @@ import Footer from "@/components/layout/Footer.astro";
 import Header from "@/components/layout/Header.astro";
 import GoogleAnalytics from "@/components/google-analytics.astro";
 import SpeedInsights from "@vercel/speed-insights/astro";
+import Analytics from "@vercel/analytics/astro";
 import SiteData from "@/constants/siteData.json";
 import { ViewTransitions } from "astro:transitions";
 import type { Graph, Thing, WebSite, WithContext } from "schema-dts";
@@ -130,6 +131,7 @@ const { className, seo, keywords, schema } = Astro.props;
       }
     </style>
     <SpeedInsights />
+    <Analytics />
 
     <noscript
       ><iframe
