--- a/src/components/blog/blog-card.astro
+++ b/src/components/blog/blog-card.astro
@@ -8,7 +8,7 @@ const { blog } = Astro.props as { blog: Blog };
 
 <a href={`/blog/${blog.slug?.current}`} class="group relative block">
   <div
-    class="absolute -inset-0.5 -z-10 animate-tilt rounded-3xl bg-gradient-to-r from-blue-800 to-purple-800 opacity-60 blur transition duration-1000 group-hover:opacity-100 group-hover:blur-md group-hover:duration-100"
+    class="animate-tilt absolute -inset-0.5 -z-10 rounded-3xl bg-gradient-to-r from-blue-800 to-purple-800 opacity-60 blur transition duration-1000 group-hover:opacity-100 group-hover:blur-md group-hover:duration-100"
   >
   </div>
   <article
@@ -24,18 +24,27 @@ const { blog } = Astro.props as { blog: Blog };
     />
     <div class="flex flex-1 flex-col justify-between p-5 sm:p-6">
       <div class="flex flex-col gap-3">
-        <h2 class="text-lg font-medium text-white/90 sm:text-xl">
+        <h2
+          transition:name={blog.title}
+          class="text-lg font-medium text-white/90 sm:text-xl"
+        >
           {blog.title}
         </h2>
 
-        <p class="line-clamp-3 text-sm text-zinc-400">
+        <p
+          transition:name={blog.seoDescription}
+          class="line-clamp-3 text-sm text-zinc-400"
+        >
           {blog.seoDescription}
         </p>
 
         <div class="mt-2 flex flex-wrap gap-2">
           {
             blog.categories.map((category) => (
-              <span class="rounded-full bg-zinc-800/50 px-3 py-1 text-xs text-zinc-300">
+              <span
+                transition:name={category._id}
+                class="rounded-full bg-zinc-800/50 px-3 py-1 text-xs text-zinc-300"
+              >
                 {category.title}
               </span>
             ))
