--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -68,7 +68,8 @@ const keyAchievements = [
 <Layout
   seo={{
     title: SiteData.pages.about.title,
-    description: SiteData.pages.about.description
+    description: SiteData.pages.about.description,
+    canonical: "https://r44j.dev/about"
   }}
   schema={{
     "@context": "https://schema.org",
