--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,8 @@ import ServicesSection from "@/components/home/ServicesSection.astro";
 <Layout
   seo={{
     title: SiteData.default.title,
-    description: SiteData.default.description
+    description: SiteData.default.description,
+    canonical: "https://r44j.dev/"
   }}
 >
   <Main>
