--- a/src/pages/uses.astro
+++ b/src/pages/uses.astro
@@ -9,7 +9,8 @@ import CinematicGrid from "@/components/home/CinematicGrid.astro";
 <Layout
   seo={{
     title: SiteData.pages.uses.title,
-    description: SiteData.pages.uses.description
+    description: SiteData.pages.uses.description,
+    canonical: "https://r44j.dev/uses"
   }}
   keywords={SiteData.pages.uses.keywords}
 >
